--- a/I-Ching.html
+++ b/I-Ching.html
@@ -41,32 +41,32 @@
           {
             name: "大吉",
             description: "运势极佳，诸事顺遂，心想事成。",
-            yi: ["万事皆宜"],
-            ji: []
+            yi: ["学习", "参加校园活动", "社交", "拓展人脉", "积极与导师沟通", "争取奖学金"],
+            ji: ["逃课", "熬夜", "不尊重他人意见", "懒散"]
           },
           {
             name: "中吉",
             description: "运势平稳，循序渐进，可得小成。",
-            yi: ["求学", "交友", "出行", "合作", "祈福"],
-            ji: ["冒险", "争斗", "投机", "远行"]
+            yi: ["复习功课", "结交新朋友", "进行团队合作", "参加志愿活动", "拓展兴趣爱好"],
+            ji: ["拖延", "过度自信", "与人争执", "忽视自己的健康"]
           },
           {
             name: "小吉",
             description: "运势略佳，需谨慎行事，方可无忧。",
-            yi: ["静思", "家务", "小规模投资", "学习新技能"],
-            ji: ["搬家", "大额交易", "激烈争执", "长途旅行"]
+            yi: ["按时完成作业", "保持社交互动", "参与校园组织", "提升自我", "积累小成果"],
+            ji: ["无计划的行动", "长时间的网络娱乐", "忽视课外活动的重要性"]
           },
           {
             name: "凶",
             description: "运势不佳，宜低调谨慎，避免风险。",
-            yi: ["休息", "反思", "整理旧物"],
-            ji: ["签约", "投资", "出行", "争吵", "冒险"]
+            yi: ["休息", "反思", "整理笔记", "与朋友讨论学习", "主动求助"],
+            ji: ["考试前临时抱佛脚", "冲动购物", "做出重大决策", "恶意竞争"]
           },
           {
             name: "大凶",
             description: "运势极差，需格外小心，静待时机。",
-            yi: [],
-            ji: ["万事不宜"]
+            yi: ["保持冷静", "等待更好的时机", "放慢脚步", "避免做出任何冲动决定"],
+            ji: ["参与不必要的纷争", "轻率决策", "盲目跟风"]
           }
         ]
       },
@@ -79,32 +79,32 @@
           {
             name: "大吉",
             description: "運勢が非常に良い、すべてが順調、願いがかなう。",
-            yi: ["すべてが良い"],
-            ji: []
+            yi: ["勉強", "キャンパス活動に参加", "社交", "人脈を広げる", "指導教官と積極的にコミュニケーション", "奨学金を争取する"],
+            ji: ["授業をサボる", "夜更かし", "他人の意見を無視する", "怠ける"]
           },
           {
             name: "中吉",
             description: "運勢は安定している、着実に進むことで小さな成功を得られる。",
-            yi: ["学習", "友達作り", "外出", "協力", "祈り"],
-            ji: ["冒険", "争い", "投機", "長距離の旅行"]
+            yi: ["復習", "新しい友達を作る", "チームワーク", "ボランティア活動に参加", "趣味を広げる"],
+            ji: ["先延ばし", "過信", "争い", "自分の健康を無視する"]
           },
           {
             name: "小吉",
             description: "運勢が少し良い、慎重に行動することで問題ない。",
-            yi: ["静かな思索", "家事", "小規模な投資", "新しいスキルの学習"],
-            ji: ["引っ越し", "大きな取引", "激しい争い", "長距離旅行"]
+            yi: ["宿題を時間通りに終わらせる", "社交を保つ", "キャンパス活動に参加", "自己成長を目指す", "少しずつ成果を上げる"],
+            ji: ["計画なしで行動する", "長時間のネットエンタメ", "課外活動の重要性を軽視する"]
           },
           {
             name: "凶",
             description: "運勢が悪い、慎重に過ごすべき。",
-            yi: ["休息", "反省", "整理整頓"],
-            ji: ["契約", "投資", "外出", "争い", "冒険"]
+            yi: ["休息", "反省", "ノートの整理", "友達と学習を話し合う", "積極的に助けを求める"],
+            ji: ["試験前の最後の追い込み", "衝動的な買い物", "重要な決断", "悪意のある競争"]
           },
           {
             name: "大凶",
             description: "運勢が非常に悪い、特に慎重に過ごすべき。",
-            yi: [],
-            ji: ["何もするべきではない"]
+            yi: ["冷静を保つ", "より良いタイミングを待つ", "ペースを落とす", "衝動的な決断を避ける"],
+            ji: ["不必要な争いに参加する", "軽率な決断", "盲目的に流される"]
           }
         ]
       },
@@ -117,32 +117,32 @@
           {
             name: "대길",
             description: "운세가 매우 좋으며, 모든 일이 순조롭고, 소망이 이루어진다.",
-            yi: ["모든 일에 유리"],
-            ji: []
+            yi: ["학업", "캠퍼스 활동 참여", "사교", "인맥 확장", "교수와 적극적인 소통", "장학금 쟁취"],
+            ji: ["수업 빼먹기", "늦게까지 밤새기", "다른 사람 의견 무시하기", "게으름 피우기"]
           },
           {
             name: "중길",
             description: "운세는 안정적이며, 착실히 진행하면 작은 성취를 이룰 수 있다.",
-            yi: ["학문", "교우", "여행", "협력", "기도"],
-            ji: ["모험", "논쟁", "투기", "원거리 여행"]
+            yi: ["복습", "새로운 친구 만들기", "팀워크", "봉사 활동 참여", "취미 넓히기"],
+            ji: ["미루기", "과신", "다툼", "건강 무시하기"]
           },
           {
             name: "소길",
             description: "운세는 다소 좋지만 신중하게 행동해야 한다.",
-            yi: ["명상", "집안일", "소규모 투자", "새로운 기술 학습"],
-            ji: ["이사", "큰 거래", "격렬한 다툼", "장거리 여행"]
+            yi: ["정해진 시간에 숙제 끝내기", "사교 유지", "캠퍼스 활동 참여", "자기 발전", "소소한 성과 쌓기"],
+            ji: ["계획 없는 행동", "인터넷에 너무 많은 시간 보내기", "교외 활동의 중요성 무시하기"]
           },
           {
             name: "흉",
             description: "운세가 나쁘므로 조심스럽게 행동해야 한다.",
-            yi: ["휴식", "반성", "정리정돈"],
-            ji: ["계약", "투자", "여행", "논쟁", "모험"]
+            yi: ["휴식", "반성", "노트 정리", "친구들과 학습 이야기 나누기", "적극적으로 도움 요청하기"],
+            ji: ["시험 직전 막판 공부", "충동적 구매", "중요한 결정", "악의적인 경쟁"]
           },
           {
             name: "대흉",
             description: "운세가 매우 나쁘므로 매우 조심해야 한다.",
-            yi: [],
-            ji: ["아무 일도 하지 말 것"]
+            yi: ["차분히 기다리기", "좋은 시기를 기다리기", "속도를 줄이기", "충동적인 결정 피하기"],
+            ji: ["불필요한 다툼 참여", "경솔한 결정", "맹목적인 따라가기"]
           }
         ]
       },
@@ -155,32 +155,32 @@
           {
             name: "Great Luck",
             description: "Excellent luck, everything goes smoothly, wishes come true.",
-            yi: ["Everything is favorable"],
-            ji: []
+            yi: ["Study", "Join campus activities", "Socialize", "Expand network", "Engage with professors", "Apply for scholarships"],
+            ji: ["Skipping class", "Staying up late", "Disregarding others' opinions", "Being lazy"]
           },
           {
             name: "Moderate Luck",
             description: "Stable luck, gradual progress leads to small achievements.",
-            yi: ["Learning", "Making friends", "Traveling", "Cooperation", "Praying"],
-            ji: ["Adventure", "Arguments", "Speculation", "Long trips"]
+            yi: ["Review lessons", "Make new friends", "Teamwork", "Join volunteer work", "Pursue hobbies"],
+            ji: ["Procrastinating", "Overconfidence", "Arguing", "Ignoring health"]
           },
           {
             name: "Small Luck",
             description: "Slightly favorable luck, need to be cautious to avoid problems.",
-            yi: ["Contemplation", "Housework", "Small investments", "Learning new skills"],
-            ji: ["Moving", "Big transactions", "Intense arguments", "Long-distance travel"]
+            yi: ["Finish assignments on time", "Maintain social interactions", "Participate in campus organizations", "Self-improvement", "Achieve small victories"],
+            ji: ["Unplanned actions", "Excessive internet time", "Ignoring extracurricular activities"]
           },
           {
             name: "Bad Luck",
             description: "Unfavorable luck, proceed with caution and avoid risks.",
-            yi: ["Rest", "Reflection", "Organizing old things"],
-            ji: ["Signing contracts", "Investing", "Traveling", "Arguments", "Adventuring"]
+            yi: ["Rest", "Reflect", "Organize notes", "Discuss studies with friends", "Seek help"],
+            ji: ["Cramming before exams", "Impulsive purchases", "Important decisions", "Malicious competition"]
           },
           {
             name: "Great Misfortune",
             description: "Very bad luck, extreme caution is needed, wait for a better time.",
-            yi: [],
-            ji: ["Do not do anything"]
+            yi: ["Stay calm", "Wait for better opportunities", "Slow down", "Avoid impulsive decisions"],
+            ji: ["Engaging in unnecessary conflicts", "Making rash decisions", "Blindly following others"]
           }
         ]
       }
